[package]
name = "website-security-header-proxy"
version = "0.1.0"
edition = "2021"
authors = [ "Tyler Earls <tyler.a.earls@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.1" }
worker-macros = { version="0.4.1" }
console_error_panic_hook = { version = "0.1.1" }
